<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bookingv2.ServicesActivity"
    tools:showIn="@layout/activity_services">

    <LinearLayout
        android:id="@+id/listServicesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/longClick2edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Long click on a service to edit/delete"
            android:visibility="visible" />

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serviceNameTitle"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="Name" />

            <TextView
                android:id="@+id/serviceTypeTitle"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Type" />

            <TextView
                android:id="@+id/serviceRateTitle"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="$/hr" />
        </android.widget.LinearLayout>

        <ListView
            android:id="@+id/listViewServices"
            android:layout_width="match_parent"
            android:layout_height="514dp">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editServiceLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:layout_editor_absoluteY="511dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/serviceNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:theme="@style/ThemeOverlay.MyTextDetail"/>

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ex. window cleaning"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type"
            android:theme="@style/ThemeOverlay.MyTextDetail"/>

        <Spinner
            android:id="@+id/typeField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rate ($/hr)"
            android:theme="@style/ThemeOverlay.MyTextDetail"/>

        <EditText
            android:id="@+id/rateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/addServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <LinearLayout
            android:id="@+id/updateDeleteButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateServiceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update" />

            <Button
                android:id="@+id/deleteServiceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>