<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bookingv2.ServicesActivity"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            layout="@layout/content_services"
            android:layout_width="match_parent"
            android:layout_height="635dp" />

        <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="I AM ADMIN SERVICES" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newServiceBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:paddingLeft="0dp"
            app:backgroundTint="?attr/colorButtonNormal"
            android:src="@drawable/personlogo" />

    </FrameLayout>



</LinearLayout>